# rust-print-pdf

./: CLAUDE.md  Cargo.toml  README.md  plan.md
.claude/: settings.local.json
examples/: generate_test.rs  print_test.rs
src/: config.rs  error.rs  lib.rs  models.rs  service.rs  traits.rs
src/pdf/: fonts.rs  generator.rs  layout.rs  mod.rs  text_utils.rs
src/print/: mod.rs  sumatra.rs
